--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>随机密码生成器</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script type="text/javascript" src="script.js"></script>
     </head>
 
     <body>
@@ -58,7 +57,7 @@
                         <option value="5">5</option>
                         <option value="6">6</option>
                         <option value="7">7</option>
-                        <option value="8">8</option>
+                        <option value="8" selected 8>8</option>
                         <option value="9">9</option>
                         <option value="10">10</option>
                         <option value="11">11</option>
@@ -80,7 +79,7 @@
                         <option value="27">27</option>
                         <option value="28">28</option>
                         <option value="29">29</option>
-                        <option value="30" selected>30</option>
+                        <option value="30">30</option>
                         <option value="31">31</option>
                         <option value="32">32</option>
                         <option value="33">33</option>
@@ -159,7 +158,7 @@
                 <td width="25%" bgcolor="#F5F5F5" name="center_td">密码数量</td>
                 <td>
                     <select id="quantity" name="quantity">
-                        <option value="1">1</option>
+                        <option value="1" selected>1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
@@ -168,7 +167,7 @@
                         <option value="7">7</option>
                         <option value="8">8</option>
                         <option value="9">9</option>
-                        <option value="10" selected>10</option>
+                        <option value="10">10</option>
                         <option value="11">11</option>
                         <option value="12">12</option>
                         <option value="13">13</option>
@@ -263,7 +262,10 @@
                 </td>
             </tr>
         </table>
-        <button id="generate-button">生成密码</button>
+        <button type="button" id="generate-button">生成密码</button>
+        <div id="passwords-container"></div>
+        <script src="script.js"></script>
+
     </body>
 
 </html>
