修改特殊字符为默认选项

--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
                 <td width="75%" bgcolor="#FFFFFF">
                     <div id="parent">
                         <span style="display:inline-block">
-                            <input type="checkbox" id="special" name="special" value="special">
+                            <input type="checkbox" id="special" name="special" value="special" checked>
                             <label for="special">特殊字符</label>
                             <input type="text" id="custom-special" name="custom-special" placeholder="!@#$%^&*">
                         </span>
@@ -277,6 +277,10 @@
             </table>
         </div>
         <script src="script.js"></script>
+
+        <div style="text-align:center; font-size:12px;">
+            <a href="https://beian.miit.gov.cn/" target="_blank">网站备案号：沪ICP备2023037106号-1</a>
+        </div>
     </body>
 
 </html>
