--- a/static/index.html
+++ b/static/index.html
@@ -278,7 +278,7 @@
         </div>
         <script src="script.js"></script>
 
-        <div style="text-align:center; font-size:12px;">
+        <div class="footer" style="text-align:center; font-size:12px;">
             <img src="./logo01.dd7ff50e.png" width="20" height="20">
             <a href="https://beian.miit.gov.cn/" target="_blank">沪ICP备2023037106号-1</a>
         </div>
